# car-detect

./: README.md  pyproject.toml
car_detection/: predict.py  predictor.py  util.py
